# Dicom3DViewer

./: .gitignore  README.md  log.txt
Dicom3DViewer/: CMakeLists.txt  Dicom3DViewer.pro  RangeSlider.cpp  RangeSlider.h  boundVisulizer.cpp  boundVisulizer.h  breakPoints.h  colorTfBreakPoints.h  colorTransferFunction.cpp  colorTransferFunction.h  dicomSeriesReader.cpp  dicomSeriesReader.h  dicomVisualizer.cpp  dicomVisualizer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  myQColor.h  mySeriesInteractorStyle.h  opacityTransferFunction.cpp  opacityTransferFunction.h  roiVisualizer.cpp  roiVisualizer.h  seriesReader.cpp  seriesVisualizer.h  transferFunction.h  volumeRenderProcess.cpp  volumeRenderProcess.h
documents/: 2019届毕业设计工作安排计划表（计算机、软件学院）2019.5.16.docx  2019届毕业设计归档材料清单.docx  2019届毕业设计（论文）规范性检查表.doc  任务书.doc  企业教师毕业设计指导工作记录.docx  企业教师毕业设计指导评价意见表.docx  开题报告3.0.docx  本科毕业设计相关管理细则说明（计算机学院企业毕设）.doc  毕业设计所需材料一览表.xlsx  毕业设计软硬件验收表及企业证明.docx  毕设软硬件验收表.doc  贺建安_09015322_毕业设计（论文）选题申报表.doc  院内导师毕业设计指导工作记录.docx
paper/: ~$VTK的三维可视化平台开发.docx  基于VTK的三维可视化平台开发.docx
